# FixRay

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CONTRIBUTING.md  Entwicklung KI-Software zur Frakturerkennung  LICENSE  README.md  UML Diagramm.adoc  Was hast du mit dem fracture-segmentation-Repository gemacht  architecture.adoc  checkpoint_inspect.txt  create-ci-and-tests.ps1  debug_out.txt  index.html  package.json  predict single image  pyproject.toml  requirements.txt  run_streamlit.ps1  test_heuristic.py  threshold_result.txt
.github/workflows/: ci.yml  tests.yml
docs/: Aktivitätsdiagramm.drawio  Architectur-Sichten (4+1 View Model).adoc  Architektur Modell.drawio  FixRay_Dokumentation.docx  Unbenanntes Diagramm.drawio  entwicklung-ki-frakturerkennung.md  models.md  was-hast-du-mit-fracture-segmentation.md
docs/Diagramme/: Aktivitätsdiagramm.drawio  Klassendiagramm.drawio  READMEDIAGRAMME.md  Zustandsmodell Diagramm.drawio
fixray-streamlit-app/: README.md  outputs  requirements.txt
fixray-streamlit-app/src/: app.py  config.py
fixray-streamlit-app/tests/: test_predict.py
inference/: __init__.py  predict_single_image.py  streamlit_app.py
public/: index.html
scripts/: bootstrap_submodules.sh  inspect_checkpoint.py  predict_single_image.py  test_load.py
src/app/: main.py
src/fixray/: __init__.py  file_helpers.py  predict.py
src/inference/: compute_threshold.py  debug_inference.py  model.py  predict_single_image.py  (+1 more)
tests/: TESTING.md  create-ci-and-tests.ps1  example.test.js  load_model_test.py  test_basic.py
(+9 files in other folders)
